[package]
name = "jh71xx-pac"
version = "0.2.0"
edition = "2021"
authors = ["rmsyn <rmsynchls@gmail.com>"]
repository = "https://github.com/rmsyn/jh71xx-pac"
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support package for the JH71xx boards"
keywords = ["riscv", "jh7110", "bsp"]
license = "GPL-3.0-only"

[dependencies.jh7110-vf2-12a-pac]
path = "./jh7110-vf2-12a-pac"
version = "0.2"
optional = true

[dependencies.jh7110-vf2-13b-pac]
path = "./jh7110-vf2-13b-pac"
version = "0.2"
optional = true

[workspace]
members = [
    "jh7110-vf2-12a-pac",
    "jh7110-vf2-13b-pac",
]

[features]
visionfive2-12a = ["jh7110-vf2-12a-pac"]
visionfive2-12a-rt = ["jh7110-vf2-12a-pac/rt"]
visionfive2-13b = ["jh7110-vf2-13b-pac"]
visionfive2-13b-rt = ["jh7110-vf2-13b-pac/rt"]
all = ["visionfive2-12a", "visionfive2-13b"]
