[package]
name = "jh71xx-pac"
version = "0.3.0"
edition = "2021"
authors = ["rmsyn <rmsynchls@gmail.com>"]
repository = "https://github.com/rmsyn/jh71xx-pac"
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access crate for the JH71xx SoCs"
keywords = ["riscv", "jh7110", "pac", "soc"]
license = "GPL-3.0-only"

[dependencies]
riscv = "0.10.1"
vcell = "0.1.3"

[dependencies.critical-section]
version = "1.1.2"
optional = true

[dependencies.riscv-rt]
version = "0.11.0"
optional = true

[features]
default = ["critical-section"]
critical-section = ["dep:critical-section"]
rt = ["riscv-rt"]
rts = ["rt", "riscv-rt/s-mode"]
all = ["critical-section", "rts"]
