[package]
name = "jh7110-vf2-12a-pac"
version = "0.1.1"
edition = "2021"
authors = ["rmsyn <rmsynchls@gmail.com>"]
repository = "https://github.com/rmsyn/jh71xx-pac"
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support package for the JH7110 VisionFive2 v1.2a board"
keywords = ["riscv", "jh7110", "bsp"]
license = "GPL-3.0-only"

[dependencies]
critical-section = { version = "1.1.2", optional = true }
riscv = "0.10.1"
riscv-rt = { version = "0.11.0", optional = true }
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]
