[package]
name = "jh7110-vf2-13b-pac"
version = "0.1.0"
edition = "2021"
authors = ["rmsyn <rmsynchls@gmail.com>"]

[dependencies]
critical-section = { version = "1.1.2", optional = true }
riscv = "0.10.1"
riscv-rt = { version = "0.11.0", optional = true }
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]
